Fixed some bugs reported by FindBugs